fix: link color in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,17 @@ a:hover {
   color: #535bf2;
 }
 
+@media (prefers-color-scheme: dark) {
+    a {
+        color: #a5c8ff;
+        /* You can customize this */
+    }
+
+    a:hover {
+        color: #8aaeff;
+    }
+}
+
 body {
   margin: 0;
   width: 100%;
